--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -22,8 +22,7 @@
             <h1>Pan Prezes</h1>
             <p>
                 <b>
-                    <span th:text='${boss.firstName}'>Imię</span>
-                    <span th:text='${boss.lastName}'>Nazwisko</span>
+                    <span th:text='|${boss.firstName} ${boss.lastName}|'>Imię Nazwisko</span>
                 </b>
             </p>
             <img th:src="${boss.photoUrl}" class="empPhoto" 
@@ -36,21 +35,87 @@
                     <th>Lp</th>
                     <th>Imię i nazwisko</th>
                     <th>Stanowisko</th>
+                    <th>Pensja</th>
                     <th>Data zatrudnienia</th>
                     <th>Data zwolnienia</th>
                     <th>Umiejętności</th>
                     <th>Uwagi</th>
                     <th>Zdjęcie</th>
                 </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                <tr th:each = "employee,iterStat : ${employees}">
+                    <!-- pozycja na liście -->
+                    <td>
+                        <span  th:unless = "${employee.dateOfTermination==null}" th:class = "fired"
+                               th:text = "${iterStat.count}">pozycja</span>
+                        <span  th:if = "${employee.dateOfTermination==null}" 
+                               th:text = "${iterStat.count}">pozycja</span>
+                    </td>
+                    <!-- wypisanie 2 el w jednej lini -->
+                    <td>
+                        <span  th:unless = "${employee.dateOfTermination==null}" th:class = "fired" 
+                               th:text = "|${employee.firstName} ${employee.lastName}|">imie nazwisko</span>
+                        <span  th:if = "${employee.dateOfTermination==null}" 
+                               th:text = "|${employee.firstName} ${employee.lastName}|">imie nazwisko</span>
+                    </td>
+                    <!-- stanowisko -->
+                    <td>
+                        <span  th:unless = "${employee.dateOfTermination==null}"  th:class = "fired"
+                               th:text = "${employee.jobTitle}">stanowisko</span>
+                        <span  th:if = "${employee.dateOfTermination==null}" 
+                               th:text = "${employee.jobTitle}">stanowisko</span>
+                    </td>
+                    <!-- formatowanie wypłaty -->
+                    <td>
+                        <span  th:unless = "${employee.dateOfTermination==null}" th:class = "fired"
+                               th:text="${#numbers.formatDecimal(employee.salary, 0, 'WHITESPACE', 2, 'POINT')}">salary</span>
+                        <span  th:if = "${employee.dateOfTermination==null}" 
+                               th:text="${#numbers.formatDecimal(employee.salary, 0, 'WHITESPACE', 2, 'POINT')}">salary</span>
+                    </td>
+                    <!-- formatowanie daty -->
+                    <td>
+                        <span  th:unless = "${employee.dateOfTermination==null}" th:class = "fired"
+                               th:text = "${#calendars.format(employee.dateOfEmployment, 'dd.MM.yyyy')}">przyjecie</span>
+                        <span  th:if = "${employee.dateOfTermination==null}" 
+                               th:text = "${#calendars.format(employee.dateOfEmployment, 'dd.MM.yyyy')}">przyjęcie</span>
+                    </td>
+                    <!-- warunek gdy jest i gdy nie ma wartości -->
+                    <td>
+                        <span th:if = "${employee.dateOfTermination==null}"> Wciąż pracuje </span>
+                        <span th:unless = "${employee.dateOfTermination==null}" th:class = "fired" 
+                              th:text = "${#calendars.format(employee.dateOfTermination, 'dd.MM.yyyy')}">zwolnienie</span>
+                    </td>
+                    <!-- wypisanie w kolumnie listy wartości -->
+                    <td>
+                        <p th:each = "skill,iterStat : ${employee.skills}">
+                            <span th:if = "${employee.dateOfTermination==null}"> 
+                                <span th:if = "${iterStat.last==false}" 
+                                      th:text = "|${skill.name} (${skill.level}),|"> Umiejętność (level)</span>
+                                <span th:if = "${iterStat.last==true}"
+                                      th:text = "|${skill.name} (${skill.level})|"> Umiejętność (level)</span>
+                            </span>
+                            <span th:unless = "${employee.dateOfTermination==null}" th:class = "fired">
+                                <span th:if = "${iterStat.last==false}" 
+                                      th:text = "|${skill.name} (${skill.level}),|"> Umiejętność (level)</span>
+                                <span th:if = "${iterStat.last==true}"
+                                      th:text = "|${skill.name} (${skill.level})|"> Umiejętność (level)</span>
+                            </span>
+                        </p>
+                    </td>
+                    <!-- wypisanie uwag -->
+                    <td>
+                        <p th:each = "comment : ${employee.comments}">
+                            <span th:if = "${employee.dateOfTermination==null}">
+                                <span th:text = "${comment}"> Uwagi</span>
+                            </span>
+                            <span th:unless = "${employee.dateOfTermination==null}" th:class = "fired">
+                                <span th:text = "${comment}"> Uwagi</span>
+                            </span>
+                        </p>
+                    </td>
+                    <!-- zdjęcie -->
+                    <td>
+                        <img th:src="${employee.photoUrl}" class="empPhoto" src="http://via.placeholder.com/250x250"/>
+                    </td>
                 </tr>
             </table>
         </div>
