--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -43,79 +43,81 @@
                     <th>Zdjęcie</th>
                 </tr>
                 <tr th:each = "employee,iterStat : ${employees}">
+                    <p>
                     <!-- pozycja na liście -->
                     <td>
-                        <span  th:unless = "${employee.dateOfTermination==null}" th:class = "fired"
-                               th:text = "${iterStat.count}">pozycja</span>
-                        <span  th:if = "${employee.dateOfTermination==null}" 
-                               th:text = "${iterStat.count}">pozycja</span>
+                        <p  th:unless = "${employee.dateOfTermination==null}" th:class = "fired"
+                               th:text = "${iterStat.count}">pozycja</p>
+                        <p  th:if = "${employee.dateOfTermination==null}" 
+                               th:text = "${iterStat.count}">pozycja</p>
                     </td>
                     <!-- wypisanie 2 el w jednej lini -->
                     <td>
-                        <span  th:unless = "${employee.dateOfTermination==null}" th:class = "fired" 
-                               th:text = "|${employee.firstName} ${employee.lastName}|">imie nazwisko</span>
-                        <span  th:if = "${employee.dateOfTermination==null}" 
-                               th:text = "|${employee.firstName} ${employee.lastName}|">imie nazwisko</span>
+                        <p  th:unless = "${employee.dateOfTermination==null}" th:class = "fired" 
+                               th:text = "|${employee.firstName} ${employee.lastName}|">imie nazwisko</p>
+                        <p  th:if = "${employee.dateOfTermination==null}" 
+                               th:text = "|${employee.firstName} ${employee.lastName}|">imie nazwisko</p>
                     </td>
                     <!-- stanowisko -->
                     <td>
-                        <span  th:unless = "${employee.dateOfTermination==null}"  th:class = "fired"
-                               th:text = "${employee.jobTitle}">stanowisko</span>
-                        <span  th:if = "${employee.dateOfTermination==null}" 
-                               th:text = "${employee.jobTitle}">stanowisko</span>
+                        <p  th:unless = "${employee.dateOfTermination==null}"  th:class = "fired"
+                               th:text = "${employee.jobTitle}">stanowisko</p>
+                        <p  th:if = "${employee.dateOfTermination==null}" 
+                               th:text = "${employee.jobTitle}">stanowisko</p>
                     </td>
                     <!-- formatowanie wypłaty -->
                     <td>
-                        <span  th:unless = "${employee.dateOfTermination==null}" th:class = "fired"
-                               th:text="${#numbers.formatDecimal(employee.salary, 0, 'WHITESPACE', 2, 'POINT')}">salary</span>
-                        <span  th:if = "${employee.dateOfTermination==null}" 
-                               th:text="${#numbers.formatDecimal(employee.salary, 0, 'WHITESPACE', 2, 'POINT')}">salary</span>
+                        <p  th:unless = "${employee.dateOfTermination==null}" th:class = "fired"
+                               th:text="${#numbers.formatDecimal(employee.salary, 0, 'WHITESPACE', 2, 'POINT')}">salary</p>
+                        <p  th:if = "${employee.dateOfTermination==null}" 
+                               th:text="${#numbers.formatDecimal(employee.salary, 0, 'WHITESPACE', 2, 'POINT')}">salary</p>
                     </td>
                     <!-- formatowanie daty -->
                     <td>
-                        <span  th:unless = "${employee.dateOfTermination==null}" th:class = "fired"
-                               th:text = "${#calendars.format(employee.dateOfEmployment, 'dd.MM.yyyy')}">przyjecie</span>
-                        <span  th:if = "${employee.dateOfTermination==null}" 
-                               th:text = "${#calendars.format(employee.dateOfEmployment, 'dd.MM.yyyy')}">przyjęcie</span>
+                        <p  th:unless = "${employee.dateOfTermination==null}" th:class = "fired"
+                               th:text = "${#calendars.format(employee.dateOfEmployment, 'dd.MM.yyyy')}">przyjecie</p>
+                        <p  th:if = "${employee.dateOfTermination==null}" 
+                               th:text = "${#calendars.format(employee.dateOfEmployment, 'dd.MM.yyyy')}">przyjęcie</p>
                     </td>
                     <!-- warunek gdy jest i gdy nie ma wartości -->
                     <td>
-                        <span th:if = "${employee.dateOfTermination==null}"> Wciąż pracuje </span>
-                        <span th:unless = "${employee.dateOfTermination==null}" th:class = "fired" 
-                              th:text = "${#calendars.format(employee.dateOfTermination, 'dd.MM.yyyy')}">zwolnienie</span>
+                        <p th:if = "${employee.dateOfTermination==null}"> Wciąż pracuje </p>
+                        <p th:unless = "${employee.dateOfTermination==null}" th:class = "fired" 
+                              th:text = "${#calendars.format(employee.dateOfTermination, 'dd.MM.yyyy')}">zwolnienie</p>
                     </td>
                     <!-- wypisanie w kolumnie listy wartości -->
                     <td>
                         <p th:each = "skill,iterStat : ${employee.skills}">
-                            <span th:if = "${employee.dateOfTermination==null}"> 
+                            <p th:if = "${employee.dateOfTermination==null}"> 
                                 <span th:if = "${iterStat.last==false}" 
                                       th:text = "|${skill.name} (${skill.level}),|"> Umiejętność (level)</span>
                                 <span th:if = "${iterStat.last==true}"
                                       th:text = "|${skill.name} (${skill.level})|"> Umiejętność (level)</span>
-                            </span>
-                            <span th:unless = "${employee.dateOfTermination==null}" th:class = "fired">
+                            </p>
+                            <p th:unless = "${employee.dateOfTermination==null}" th:class = "fired">
                                 <span th:if = "${iterStat.last==false}" 
                                       th:text = "|${skill.name} (${skill.level}),|"> Umiejętność (level)</span>
                                 <span th:if = "${iterStat.last==true}"
                                       th:text = "|${skill.name} (${skill.level})|"> Umiejętność (level)</span>
-                            </span>
+                            </p>
                         </p>
                     </td>
                     <!-- wypisanie uwag -->
                     <td>
                         <p th:each = "comment : ${employee.comments}">
-                            <span th:if = "${employee.dateOfTermination==null}">
+                            <p th:if = "${employee.dateOfTermination==null}">
                                 <span th:text = "${comment}"> Uwagi</span>
-                            </span>
-                            <span th:unless = "${employee.dateOfTermination==null}" th:class = "fired">
+                            </p>
+                            <p th:unless = "${employee.dateOfTermination==null}" th:class = "fired">
                                 <span th:text = "${comment}"> Uwagi</span>
-                            </span>
+                            </p>
                         </p>
                     </td>
                     <!-- zdjęcie -->
                     <td>
                         <img th:src="${employee.photoUrl}" class="empPhoto" src="http://via.placeholder.com/250x250"/>
                     </td>
+                </p>
                 </tr>
             </table>
         </div>
